journal entries kinda working
